<resources>

    <string name="apikey">10ac04c0-38de-11ec-b8bd-0159fdd04aed</string>
    <string name="server_address">"https://app.sportdataapi.com/api/v1/</string>

    <string name="app_name">Football  Manager</string>
    <string name="exit">Exit</string>
    <string name="line">Line</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="premier_league">Premier League</string>
    <string name="laliga">LaLiga</string>
    <string name="clubs">Clubs</string>
    <string name="table">Table</string>
    <string name="hi">hi</string>
    <string name="calendar">Calendar</string>
    <string name="shots_total">Shots total</string>
    <string name="fouls">Fouls</string>
    <string name="red_cards">Red cards</string>
    <string name="yellow_cards">Yellow cards</string>
    <string name="possession_percent">Possession percent</string>
    <string name="shots_blocked">Shots blocked</string>
    <string name="shots_off_target">Shots off target</string>
    <string name="shots_on_target">Shots on target</string>
    <string name="corners">Corners</string>
    <string name="offsides">Offsides</string>
    <string name="attacks">Attacks</string>
    <string name="goal_attempts">Goal attempts</string>
    <string name="penalties">Penalties</string>
    <string name="dangerous_attacks">Dangerous attacks</string>
    <string name="statistics">Statistics</string>
    <string name="team_stats">TEAM STATS</string>
    <string name="error_message">Something went wrong!</string>
    <string name="points">Points</string>
    <string name="teams">Teams</string>
    <string name="position">Pos</string>
    <string name="players">Players</string>
    <string name="goals">Goals</string>
    <string name="matches">Matches</string>
    <string name="lose">Lose</string>
    <string name="draw">Draw</string>
    <string name="win">Win</string>
    <string name="Network_error">Network error</string>
    <string name="country">Country:</string>
    <string name="age">Age:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="height_cm">Height(cm):</string>
    <string name="weight_kg">Weight(kg):</string>
    <string name="unknown">Unknown</string>
    <string name="matches_played">Matches Played</string>
    <string name="minutes_played">Minutes Played</string>
    <string name="goals_overall">Goals Overall</string>
    <string name="goals_home">Goals Home</string>
    <string name="goals_away">Goals Away</string>
</resources>
