<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/logoFirstTeamStatistic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/layout_margin_small" />

                    <TextView
                        android:id="@+id/team_stats"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/team_stats"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize_medium" />

                    <ImageView
                        android:id="@+id/logoSecondTeamStatistic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/layout_margin_small" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewStatistics"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/cell_for_statistics" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_extra_large"
                android:indeterminateDrawable="@drawable/spinner_ring"
                android:indeterminateOnly="true"
                android:theme="@style/CircularProgress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Statistics">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                app:title="" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="290dp"
                    android:background="@color/white">

                    <Button
                        android:id="@+id/btnCalendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/collapsing_toolbar_extra_large"
                        android:layout_marginTop="@dimen/collapsing_toolbar_medium"
                        android:elevation="@dimen/layout_margin_extra_small"
                        android:stateListAnimator="@null"
                        android:text="@string/calendar"
                        android:textColor="@color/black"
                        android:translationZ="@dimen/layout_margin_extra_small"
                        app:cornerRadius="@dimen/layout_margin_small"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageViewSecondTeam"
                        app:rippleColor="#33AAAAAA"
                        app:strokeColor="@color/black"
                        app:strokeWidth="@dimen/layout_divider_height" />

                    <Button
                        android:id="@+id/btnTable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/collapsing_toolbar_medium"
                        android:layout_marginEnd="@dimen/collapsing_toolbar_extra_large"
                        android:elevation="@dimen/layout_margin_extra_small"
                        android:stateListAnimator="@null"
                        android:text="@string/table"
                        android:textColor="@color/black"
                        android:translationZ="@dimen/layout_margin_extra_small"
                        app:cornerRadius="@dimen/layout_margin_small"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageViewFirstTeam"
                        app:rippleColor="#33AAAAAA"
                        app:strokeColor="@color/black"
                        app:strokeWidth="@dimen/layout_divider_height" />

                    <ImageView
                        android:id="@+id/imageViewSecondTeam"
                        android:layout_width="@dimen/layout_large"
                        android:layout_height="@dimen/layout_large"
                        android:layout_marginTop="@dimen/collapsing_toolbar_extra_large"
                        android:layout_marginEnd="@dimen/collapsing_toolbar_small"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints"
                        tools:srcCompat="@tools:sample/avatars" />

                    <ImageView
                        android:id="@+id/imageViewFirstTeam"
                        android:layout_width="@dimen/layout_large"
                        android:layout_height="@dimen/layout_large"
                        android:layout_marginStart="@dimen/collapsing_toolbar_small"
                        android:layout_marginTop="@dimen/collapsing_toolbar_extra_large"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/collapsing_toolbar_extra_large"
                        android:textColor="@color/my"
                        app:layout_constraintEnd_toStartOf="@+id/imageViewSecondTeam"
                        app:layout_constraintStart_toEndOf="@+id/imageViewFirstTeam"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Finished" />

                    <TextView
                        android:id="@+id/score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin_extra_small"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize_large"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/imageViewSecondTeam"
                        app:layout_constraintStart_toEndOf="@+id/imageViewFirstTeam"
                        app:layout_constraintTop_toBottomOf="@+id/status"
                        tools:text="10-0" />

                    <TextView
                        android:id="@+id/data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin_small"
                        android:textColor="@color/my"
                        app:layout_constraintEnd_toStartOf="@+id/imageViewSecondTeam"
                        app:layout_constraintStart_toEndOf="@+id/imageViewFirstTeam"
                        app:layout_constraintTop_toBottomOf="@+id/score"
                        tools:text="20/11/2020" />

                    <TextView
                        android:id="@+id/venue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/my"
                        app:layout_anchorGravity="center"
                        app:layout_constraintEnd_toStartOf="@+id/imageViewSecondTeam"
                        app:layout_constraintStart_toEndOf="@+id/imageViewFirstTeam"
                        app:layout_constraintTop_toBottomOf="@+id/data"
                        tools:text="Santiago Bernabeu" />

                    <TextView
                        android:id="@+id/nameFirstTeam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/collapsing_toolbar_small"
                        android:layout_marginTop="@dimen/collapsing_toolbar_medium"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize_small"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Real Madrid" />

                    <TextView
                        android:id="@+id/nameSecondTeam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/collapsing_toolbar_medium"
                        android:layout_marginEnd="@dimen/collapsing_toolbar_small"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize_small"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Barcelona" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
